<resources>
    <string name="app_name">KeaWallet</string>
    <string name="account_selection_hint">To start adding a new bank account to the app, you need to choose a credit institute from the box below.</string>
    <string name="placeholder_main">Hier sollte später ein Dropdaown zur Auswahl der Konten sowie die Transaktions-Liste erscheinen</string>
    <string name="institutes_read_error">Was no able to read the list of credit institutes.</string>
    <string name="instittue_login_hint">Your login name</string>
    <string name="institute_password_hint">Your login password / PIN</string>
    <string name="institute_dropdown_initial">Select an institute from this list!</string>
    <string name="add_account_btm">Add account</string>
    <string name="invalid_credit_institute">Invalud credit institute</string>
    <string name="user_must_not_be_empty">User field must not be empty!</string>
    <string name="secret_must_not_be_empty">You must give a secret!</string>
    <string name="connect_info">Trying to connect to server...</string>
    <string name="check_data_info">Checking credentials...</string>
    <string name="failed">failed</string>
    <string name="success">success</string>
    <string name="account_info">Found Account:</string>
    <string name="account_summary">Found %1$d accounts.</string>
    <string name="password_dialog_title">Set password</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="password_explanation">Surely, you don\'t want your password to be stored in plain text on this device. Thus we need you to set a password to secure you login data:</string>
    <string name="store_password">Store password</string>
    <string name="wrong_password">The password you entered is incorrect!</string>
    <string name="fetch_transactions">fetch transactions</string>
    <string name="fetch_title">KeaWallet - fetching transactions</string>
    <string name="password_title">KeaWallet - Password required</string>
    <string name="no_accouts">No bank accounts found!</string>
    <string name="enter_password">Enter password to unlock the account database.</string>
    <string name="unlock_database">Unlock the databse</string>
    <string name="fetch_login_transactions">Fetching transactions for #:</string>
    <string name="transaction_count"># transactions</string>
    <string name="fetch_account_transactions">Account #:</string>
    <string name="create_account">Create account</string>
    <string name="account_selection_hint_2">You can select a credit institute by typing either a part of its name, or the institute number.</string>
    <string name="insurance_life_insurance">Insurance.Life Insurance</string>
    <string name="insurance_health">Insurances.Health Insurance</string>
    <string name="insurance_life">Insurances.Life Insurance</string>
    <string name="mobility_car">Mobility.Car</string>
    <string name="mobility_public">Mobility.Public Transport</string>
    <string name="fees">Fees</string>
    <string name="ventures">Ventures</string>
    <string name="income">Income</string>
    <string name="leisure">Leisure</string>
    <string name="conumption">Consumption</string>
    <string name="no_transaction_found">No transaction found</string>
    <string name="category_insurance">Insurance</string>
    <string name="insurance">Insurance</string>
    <string name="category_life_insurance">Life Insurance</string>
    <string name="category_health_insurance">Health Insurance</string>
    <string name="category_mobility">Mobility</string>
    <string name="category_mobility_car">Car</string>
    <string name="category_mobility_public">Public Transportation</string>
    <string name="category_consumption">Consumption</string>
    <string name="category_leisure">Leisure</string>
    <string name="category_income">Income</string>
    <string name="category_ventures">Ventures</string>
    <string name="category_fees">Fees</string>
    <string name="category_accomodation">Accommodation</string>
    <string name="category_food">Food</string>
    <string name="add_new_category">Add new category to "%s"</string>
    <string name="category">Category</string>
    <string name="no_category_assined">No category assigned.</string>
    <string name="refresh_explanation">Click here to update your list of transactions, after you added your first account.</string>
    <string name="add_account_explanation">Click here to add Bank accounts to this App.</string>
    <string name="welcome_text">Welcome to KeaWallet!</string>
    <string name="app_explanation">This app helps you to get an overview on the transactions of you Bank accounts. It allows you to categorize your transactions and gives you montly summaries for your expenses. At the beginning, you will have to assign categories manually. After some learning, the app will handle that for you.</string>
    <string name="selector_explanation">You can select one of your accounts from this selector. If there are uncategorized transactions, they are shown below the selector. Click on the transaction to view details.</string>
    <string name="category_explanation">Here is a list of categroies for your transactions. To add the transaction above to a category, just click it.</string>
    <string name="collapse_explanation">Usings these Buttons, you can collapse/expand the transaction categories or create new subcategories.</string>
    <string name="category_cash">Cash</string>
    <string name="category_sport">Sport</string>
    <string name="category_bike">Bicycle</string>
    <string name="category_investment_fund">Investment fund</string>
    <string name="category_account_fee">addcount fee</string>
    <string name="category_miscellaneous">Miscellaneous</string>
    <string name="category_public_braodcasting">Public broadcasting</string>
    <string name="category_rent">Rent</string>
    <string name="category_electricity">Electricity</string>
    <string name="category_liability">Liability</string>
    <string name="current_balance">Balance: ?</string>
    <string name="expected_repetition">Expected repetition: ?</string>
    <string name="expected">expected:</string>
    <string name="unknown_saldo">unknwon</string>
    <string name="expected_sum">/ expected transactions: ?</string>
    <string name="in_x_days">In ? days:</string>
    <string name="x_days_ago">\? days ago:</string>
    <string name="today">Today:</string>
    <string name="tomorrow">Tomorrow:</string>
</resources>
