<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="de.keawe.keawallet.AddAccount">

    <TextView
        android:id="@+id/account_selection_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account_selection_hint"/>

    <AutoCompleteTextView
        android:id="@+id/institute_selector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/account_selection_hint"
        android:layout_alignEnd="@+id/account_selection_hint"
        android:layout_alignParentStart="true" />

    <RelativeLayout
        android:id="@+id/institute_credentials_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/institute_selector"
        android:layout_alignParentStart="true"
        android:visibility="visible">

        <EditText
            android:id="@+id/institute_login"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="22dp" />

        <TextView
            android:id="@+id/institute_login_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/institute_login"
            android:layout_toEndOf="@+id/institute_login"
            android:text="@string/instittue_login_hint" />

        <EditText
            android:id="@+id/institute_password"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/institute_login_hint"
            android:layout_alignParentStart="true"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/institute_password_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/institute_password"
            android:layout_toEndOf="@+id/institute_password"
            android:text="@string/institute_password_hint" />

        <Button
            android:id="@+id/add_account_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="0dp"
            android:enabled="true"
            android:text="@string/add_account_btm" />

        <RelativeLayout
            android:id="@+id/institute_credentials_checks"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/institute_password"
            android:layout_alignParentStart="true"
            android:visibility="visible">

            <TextView
                android:id="@+id/check_data_state"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:text="@string/check_data_info" />

            <TextView
                android:id="@+id/server_connect_state"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/check_data_state"
                android:layout_alignEnd="@+id/check_data_state"
                android:layout_alignParentStart="true"/>

            <TextView
                android:id="@+id/account_state"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/server_connect_state"
                android:layout_alignEnd="@+id/server_connect_state"
                android:layout_alignParentStart="true" />

        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>
